# SnAPI.AssetPipeline

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  SnPAK File Format Specification Version 1.md
cli/: CMakeLists.txt  main.cpp
cmake/: Dependencies.cmake
examples/: CMakeLists.txt
examples/OpenGLTexture/: CMakeLists.txt  main.cpp
include/: AssetCache.h  AssetManager.h  AssetPackReader.h  AssetPackWriter.h  AssetPipeline.h  AsyncLoader.h  Export.h  IAssetCooker.h  IAssetImportSettings.h  IAssetImporter.h  IPayloadSerializer.h  IPipelineContext.h  IPluginRegistrar.h  MemoryMappedFile.h  PackCompression.h  PayloadRegistry.h  PipelineBuildConfig.h  RuntimePipelineConfig.h  SourceMountConfig.h  TypedPayload.h  Uuid.h
plugins/Texture/: CMakeLists.txt  TextureCooker_RGBA8.cpp  TextureImporter_FreeImage.cpp  TexturePayloadSerializers.cpp  TexturePayloadSerializers.h  TexturePluginIds.h  TexturePluginMain.cpp  TexturePluginPayloads.h
plugins/TextureCompressor/: CMakeLists.txt  CompressorBackendASTC.cpp  CompressorBackendASTC.h  CompressorBackendBCn.cpp  CompressorBackendBCn.h  MipGenerator.cpp  MipGenerator.h  TextureCompressorCooker.cpp  TextureCompressorIds.h  TextureCompressorImportSettings.h  TextureCompressorImporter.cpp  TextureCompressorPayloadSerializers.cpp  TextureCompressorPayloadSerializers.h  TextureCompressorPayloads.h  TextureCompressorPluginMain.cpp  TextureFormatSelector.cpp  TextureFormatSelector.h
src/Core/: PayloadRegistry.cpp  PipelineContext.cpp  UuidImpl.cpp
src/Hashing/: XXHash.cpp
src/Pack/: AssetPackReader.cpp  AssetPackWriter.cpp  Compression.cpp  MemoryMappedFile.cpp  SnPakFormat.h
src/Pipeline/: AssetPipeline.cpp  IncrementalCache.cpp  PluginLoader.cpp  PluginLoaderInternal.h
src/Runtime/: AssetCache.cpp  AssetManager.cpp  AsyncLoader.cpp  AutoMountScanner.cpp  AutoMountScanner.h  RuntimePipeline.cpp  RuntimePipeline.h  SourceAssetResolver.cpp  SourceAssetResolver.h
tests/: CMakeLists.txt  CorruptionTests.cpp  PackDependencyTests.cpp  PackFormatTests.cpp  PipelineTests.cpp  SourceAssetTests.cpp  TextureCompressorTests.cpp  UuidTests.cpp
